[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_notification_service"
version = "3.1.10"
description = "Notification service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>", "Simon Chénard <simon.chenard2@mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_notification_service"}]
include = [
    "bento_notification_service/migrations/*",
    "bento_notification_service/migrations/**/*"
]
repository = "https://github.com/bento-platform/bento_notification_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
bento-lib = {version = "^13.2.0", extras = ["flask"]}
Flask-Migrate = "^4.0.5"
Flask = "~3.0.3"
flask-sqlalchemy = "~3.0.5"
SQLAlchemy = "^1.4.49"
flask-cors = "^6.0.0"
asgiref = "^3.8.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
coverage = "^7.3.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
debugpy = "^1.8.6"
ruff = "^0.9.10"

[tool.ruff]
line-length = 120
exclude = ["migrations"]
