[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_notification_service"
version = "3.1.13"
description = "Notification service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>", "Simon Chénard <simon.chenard2@mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_notification_service"}]
include = [
    "bento_notification_service/migrations/*",
    "bento_notification_service/migrations/**/*"
]
repository = "https://github.com/bento-platform/bento_notification_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12.0"
bento-lib = {version = "^14.0.3", extras = ["flask"]}
Flask-Migrate = "^4.1.0"
Flask = "~3.0.3"
flask-sqlalchemy = "~3.0.5"
SQLAlchemy = "^1.4.49"
flask-cors = "^6.0.1"
asgiref = "^3.10.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.31.0"
coverage = "^7.11.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
debugpy = "^1.8.17"
ruff = "^0.14.1"

[tool.ruff]
line-length = 120
exclude = ["migrations"]
